cabal-version:   3.0
name:            minilsm-hs
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      cailue@apache.org
author:          cl
homepage:        https://github.com/clslaid/minilsm-hs.git
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Lsm
        Lsm.Block
        Lsm.MemTable
        Lsm.Wal

    hs-source-dirs:   src
    default-language: GHC2021
    build-depends:
        base >=4.12 && <5,
        bytestring,
        tskiplist

executable minilsm-hs-cli
    main-is:          Cli.hs
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ^>=4.17.2.1,
        minilsm-hs

test-suite minilsm-hs-test
    type:               exitcode-stdio-1.0
    main-is:            Test.hs
    build-tool-depends: tasty-discover:tasty-discover
    hs-source-dirs:     test
    default-language:   GHC2021
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ^>=4.17.2.1,
        tasty,
        tasty-discover
