cabal-version:   3.0
name:            minilsm-hs
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      cailue@apache.org
author:          cl
homepage:        https://github.com/clslaid/minilsm-hs.git
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Lsm
        Lsm.Block
        Lsm.Error
        Lsm.MemTable
        Lsm.Wal

    hs-source-dirs:   src
    default-language: GHC2021
    build-depends:
        base >=4.12 && <5,
        binary >=0.8 && <0.9,
        bytestring,
        containers,
        digest >=0.0.2 && <0.1,
        hashable,
        mtl,
        stm,
        transformers >=0.5 && <0.6,
        ttrie

executable minilsm-hs-cli
    main-is:          Cli.hs
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.17 && <5.0,
        minilsm-hs

test-suite minilsm-hs-test
    type:               exitcode-stdio-1.0
    main-is:            Test.hs
    build-tool-depends: tasty-discover:tasty-discover
    hs-source-dirs:     test
    other-modules:      Lsm.WalSpec
    default-language:   GHC2021
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.17 && <5.0,
        binary >=0.8 && <0.9,
        bytestring,
        containers,
        directory,
        hspec,
        minilsm-hs,
        tasty,
        tasty-discover,
        tasty-hspec,
        tasty-hunit
